Dec 27, 2007

  * TS: Inline constraint lookup.
 
  * TS: Precompile term hashing.
 
Sep 26, 2007

  * TS: Code cleaning was hampered by line numbers.
	Reported by Mike Elston.

May 2, 2007

  * PVW: Bug fix in observation analysis.
  * PVW: Consistency checks of experimental history pragma.

Apr 5, 2007

  * TS: Lessened worst bottlenecks in CHR compiler,
	in the guard simplification phase.

Mar 26, 2007

  * TS: Experimental dynattr option, for dynamic size attribute terms.

Mar 16, 2007

  * TS: Extended observation analysis (abstract interpretation)
	to deal with disjunctions. With Paolo Tacchella.

Mar 14, 2007

  * TS: Renamed hprolog:substitute/4 to substitute_eq/4, because of
	name conflict with library(edit).

Mar 12, 2007

  * TS: Use line numbers in error and warning messages.

Mar 8, 2007

  * TS: Added maintenance of line numbers through CHR compilation
	as an option: chr_option(line_numbers,on).

Mar 5, 2007

  * TS: Bug fix: setarg/3 instantiation error reported by Mike Elston.
	Caused by missing suspension argument in debug off, optimize off
	mode.

Feb 22, 2007

 * LDK: O(1) removal from hashtables, with experimental
        chr_option(ht_removal,on).

Jan 25, 2007

 * PVW: Bugfixes for optional use of CHR constraints in rule guards.

Jan 18, 2007

  * PVW: Optional use of CHR constraints in rule guards.

Nov 20, 2006

  * TS: Bug fix in compiler_errors.pl.

Oct 25, 2006

  * TS: Bug fix in occurrence subsumption by Jon Sneyers.

Oct 18, 2006

  * TS: New preprocessor feature.

  * TS: Parametrization of experimental chr_identifier type.

Oct 16, 2006

  * TS: More inlining.

  * TS: Stronger static type checking.

  * TS: Omitted buggy FD analysis from bootstrapping process.

Oct 12, 2006

  * TS: More inlining.

  * TS: Experimental chr_identifier type.

Oct 10, 2006

  * TS: Allow for empty type definitions aka phantom types. These are 
	useful for some type-level tricks. A warning is issued so the 