@@ -200,6 +200,14 @@ option_definition(mode,ModeDecl,[]) :-
 option_definition(store,FA-Store,[]) :-
 	chr_translate:store_type(FA,Store).
 
+%------------------------------------------------------------------------------%
+option_definition(declare_stored_constraints,off,[declare_stored_constraints-off]).
+option_definition(declare_stored_constraints,on ,[declare_stored_constraints-on]).
+
+option_definition(stored,F/A,[]) :-
+	chr_translate:stored_assertion(F/A).
+%------------------------------------------------------------------------------%
+
 option_definition(debug,off,Flags) :-
         option_definition(optimize,full,Flags2),
         Flags = [ debugable - off | Flags2].
@@ -323,6 +331,8 @@ chr_pp_flag_definition(ht_removal,[off,on]).
 chr_pp_flag_definition(mixed_stores,[off,on]).
 chr_pp_flag_definition(line_numbers,[off,on]).
 chr_pp_flag_definition(dynattr,[off,on]).
+
+chr_pp_flag_definition(declare_stored_constraints,[off,on]).
 
 chr_pp_flag(Name,Value) :-
 	atom_concat('$chr_pp_',Name,GlobalVar),
