@@ -1,3 +1,12 @@
+Dec 29, 2007
+
+  * TS: Experimental option declare_stored_constraints for
+	telling the compiler to warn for stored constraints
+	that are not asserted to be stored. Use the
+		:- chr_constraint f(...) # stored.
+	notation for asserting that a constraint is expected to
+	be stored.
+
 Dec 27, 2007
 
   * TS: Inline constraint lookup.
